undo and move to pkg

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -307,7 +307,7 @@
 \endbeamercolorbox\fi\endgroup}
 
 \let\btdmbibfont\footnotesize
-\def\printBibCommand{\let\bibfont\btdmbibfont\printbibliography[title={},heading=none,notcategory={@hide},locallabelwidth,defernumbers=true]}
+\def\printBibCommand{\let\bibfont\btdmbibfont\printbibliography[title={},heading=none,notcategory={@hide},locallabelwidth]}
 
 \AtEndPreamble{%
 \@ifundefined{ver@biblatex.sty}{}{%
