--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -457,6 +457,8 @@
 }
 \let\btdm@footline@prefix\@empty
 
+\let\btdm@sec@width\z@
+\let\btdm@sec@text\@empty
 \newcommand\SetNextSectionText[2][.45\linewidth]{\def\btdm@sec@width{#1}\def\btdm@sec@text{#2}}
 \AtBeginSection[]{\ifsectionbanner\begingroup
     \setfootmarker{\btdm@footbottomleft@title}%
@@ -464,7 +466,7 @@
     \@btdm@footer@has@sub@false\global\let\btdm@footline@prefix\@empty} \else\setbeamercolor{background canvas}{bg=btdm@primary}\BtdmMakeNextFullBottom\fi
     \begin{frame}[t]\relax\relax
         \hypertarget{section.\thesection}{}%
-        \null\hfill\llap{\smash{\raisebox{-\height+.6cm}{\parbox{\btdm@sec@width}{\raggedleft\usebeamerfont{section text}\usebeamercolor[fg]{section text}\btdm@sec@text}}}}\vskip3em\vfill\centering\usebeamerfont{section title}\usebeamercolor[fg]{section title}\strut\if@btdm@darkmode@\color{btdm@primary}\fi\insertsectionhead\strut\vfill
+        \if\btdm@sec@text\@empty\null\hfill\llap{\smash{\raisebox{-\height+.6cm}{\parbox{\btdm@sec@width}{\raggedleft\usebeamerfont{section text}\usebeamercolor[fg]{section text}\btdm@sec@text}}}}\fi\vskip3em\vfill\centering\usebeamerfont{section title}\usebeamercolor[fg]{section title}\strut\if@btdm@darkmode@\color{btdm@primary}\fi\insertsectionhead\strut\vfill
     \end{frame}
 \endgroup\fi\let\btdm@sec@text\@empty}
 \endinput
