--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -21,16 +21,13 @@
 \DeclareVoidOption{darkmode-git}{\def\btdm@mode{darkmode-git}}
 
 \newif\ifbtdm@largetrig@
-\DeclareVoidOption{small-triangle}{\btdm@largetrig@false}
-\DeclareVoidOption{large-triangle}{\btdm@largetrig@true}
+\DeclareVoidOption{small-triangle}{\btdm@largetrig@false} \DeclareVoidOption{large-triangle}{\btdm@largetrig@true}
 
 \newif\ifbtdm@primaryfoot@
-\DeclareVoidOption{primary-foot}{\btdm@primaryfoot@true}
-\DeclareVoidOption{gray-foot}{\btdm@primaryfoot@false}
+\DeclareVoidOption{primary-foot}{\btdm@primaryfoot@true} \DeclareVoidOption{gray-foot}{\btdm@primaryfoot@false}
 % bibliography
 \newif\ifbtdm@bibliography@ \btdm@bibliography@true % default: yes/ifloaded
-\DeclareVoidOption{nobib}{\btdm@bibliography@false}
-\DeclareVoidOption{showbib}{\btdm@bibliography@true}
+\DeclareVoidOption{nobib}{\btdm@bibliography@false} \DeclareVoidOption{showbib}{\btdm@bibliography@true}
 
 \DeclareStringOption[\btdm@defaultcolor]{color}[\btdm@defaultcolor]
 \ProcessKeyvalOptions*
@@ -239,12 +236,13 @@
 \hskip-1.25ex\dohead
 \box\beamer@sectionbox\hfil}}
 
+\def\btdm@next@{\thinspace~\mdseries\faAngleRight~}
 \newsavebox\btdm@box@lowforsec
 \def\btdm@typesetftocfooter@footfade{%
-\ifnum\i>\btdm@sectionmax@target@start
 \pgfmathsetmacro\btdm@disttotarget{int(min(100,max(5,30*abs(\i-\value{section}))))}%
+\ifnum\i>\btdm@sectionmax@target@start
 \pgfmathsetmacro\btdm@disttotarget@last{int(min(100,max(5,30*abs(\i-\value{section}-1))))}%
-{\btdm@printshort@mid\color{lightgray!\btdm@disttotarget@last!darkgray}\mdseries\,\faAngleRight\,}\btdm@printshort@mid\fi
+{\btdm@printshort@mid\color{lightgray!\btdm@disttotarget@last!darkgray}\btdm@next@}\btdm@printshort@mid\fi
 \color{lightgray!\btdm@disttotarget!darkgray}}
 
 \newif\if@btdm@footer@has@sub@
@@ -266,7 +264,7 @@
     \foreach \i in {\btdm@sectionmax@target@start,...,\btdm@sectionmax@target@end} {%
         \ifbtdm@footfade@
             \btdm@typesetftocfooter@footfade
-        \else\ifnum\i>\btdm@sectionmax@target@start\btdm@printshort@mid{\thinspace~\mdseries\faAngleRight~}\btdm@printshort@mid\fi\fi
+        \else\ifnum\i>\btdm@sectionmax@target@start\btdm@printshort@mid\btdm@next@\btdm@printshort@mid\fi\fi
         \setbox\btdm@box@lowforsec=\hbox{\btdm@printshort@lowforsec{\i}}%
         % note: we always calc the non(semi)bold thickness
         % \ifnum\value{section}=\i % old secton guard
