no fade on section pages

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -448,6 +448,7 @@
 \@btdm@footer@has@sub@false\colorlet{btdm@border@down}{btdm@primary}%
 \colorlet{btdm@foot}{btdm@contrast}%
 \ifbtdm@primaryfoot@\setbeamercolor{active section in head/foot}{fg=btdm@contrast}\fi
+\btdm@footfade@false % this way we do not fade on sections
 \colorlet{btdm@foot@page}{btdm@contrast}\global\let\btdm@footline@prefix\@empty}%
 }
 \let\btdm@footline@prefix\@empty
