--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -412,7 +412,7 @@
 \let\btdm@titlepage@number\@empty
 
 \defbeamertemplate*{title page}{digital-minimal}[1][]{%
-\smash{\hskip\textwidth\llap{\raisebox{-.5\height}{\@declaredcolor{btdm@softtext}\fontsize{72pt}{72pt}\btdm@sbseries\btdm@titlepage@number}}}\vfill
+\smash{\hskip\textwidth\llap{\raisebox{-.5\height}{\@declaredcolor{btdm@softtext}\fontsize{72pt}{72pt}\btdm@sbseries\btdm@titlepage@number}}}\vskip2em\vfill
 \begin{center}
 \parskip=\medskipamount
     {\usebeamerfont{title}\usebeamercolor*[fg]{title}\inserttitle}\par
