--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -305,8 +305,9 @@
 \setfoottitlemarker{\insertauthoremail~/ \insertshortdate}
 
 \def\btdm@bottomtoc@w{.7\paperwidth}
+\newdimen\btdmfootheight \btdmfootheight=13.96\p@
 \setbeamertemplate{footline}{\begingroup\btdm@footline@prefix\ifdmfoot
-\beamercolorbox[wd=\paperwidth,leftskip=\z@,rightskip=\z@,center,ht=4.65ex,sep=3pt,shadow=false]{footline}% default color
+\beamercolorbox[wd=\paperwidth,leftskip=\z@,rightskip=\z@,center,ht=\btdmfootheight,sep=3pt,shadow=false]{footline}% default color
     \strut\minipage{\dimexpr\paperwidth-.5cm}%
     \usebeamerfont{page number in head/foot}%
     \strut\rlap{\btdm@footbottomleft}\hfill
