fine tune btdm fonts

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -33,8 +33,10 @@
 \ProcessKeyvalOptions*
 
 % \RequirePackage[defaultfam,light,tabular,lining]{montserrat}
-\RequirePackage[sfdefault,proportional,lining,scaled=.95]{FiraSans}
+\RequirePackage[sfdefault,proportional,lining,book,scaled=.95]{FiraSans}
 \RequirePackage[scaled=.95]{FiraMono}
+
+\linespread{1.075}
 
 % mabye check Londrina Solid
 \def\btdm@sbseries{\fontseries{sb}\selectfont}
