--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -39,7 +39,7 @@
 \linespread{1.075}
 
 % mabye check Londrina Solid
-\def\btdm@sbseries{\fontseries{sb}\selectfont}
+\def\btdm@sbseries{\bfseries}%\fontseries{sb}\selectfont}
 
 \RequirePackage{sfmath} % TODO: no-libs option
 % update math figures
