--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -33,13 +33,13 @@
 \ProcessKeyvalOptions*
 
 % \RequirePackage[defaultfam,light,tabular,lining]{montserrat}
-\RequirePackage[sfdefault,proportional,lining,book,scaled=.95]{FiraSans}
+\RequirePackage[sfdefault,proportional,lining,medium,scaled=.95]{FiraSans}
 \RequirePackage[scaled=.95]{FiraMono}
 
 \linespread{1.075}
 
 % mabye check Londrina Solid
-\def\btdm@sbseries{\bfseries}%\fontseries{sb}\selectfont}
+\def\btdm@sbseries{\fontseries{sb}\selectfont}
 
 \RequirePackage{sfmath} % TODO: no-libs option
 % update math figures
