--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -240,7 +240,7 @@
 
 \def\btdm@next@{\thinspace~\mdseries\faAngleRight~}
 \newsavebox\btdm@box@lowforsec
-\def\btdm@typesetftocfooter@footfade{%
+\def\btdm@typesettocfooter@footfade{%
 \pgfmathsetmacro\btdm@disttotarget{int(min(100,max(5,30*abs(\i-\value{section}))))}%
 \ifnum\i>\btdm@sectionmax@target@start
 \pgfmathsetmacro\btdm@disttotarget@last{int(min(100,max(5,30*abs(\i-\value{section}-1))))}%
@@ -253,33 +253,42 @@
 \let\BtdmNoSubsInFooter\@btdm@footer@has@sub@false
 \let\BtdmDoSubsInFooter\@btdm@footer@has@sub@true
 
-\def\btdm@typesetftocfooter{%
+\def\btdm@@typesettocfooter{ % get start index as sec-2
 \setbox\@tempboxa=\hbox{\vphantom{\textbf{A}}}%
+\pgfmathsetmacro\btdm@sectionmax@target@start{int(max(1,\number\c@section-\btdm@footline@threshold/2))}%
+\pgfmathsetmacro\btdm@sectionmax@target@end{int(min(\number\c@btdm@sectioncount,\btdm@sectionmax@target@start+\btdm@sectionmax@target@preview))}%
+% try to update lower if upper was capped
+\pgfmathsetmacro\btdm@sectionmax@target@start{int(max(1,\btdm@sectionmax@target@end-\btdm@sectionmax@target@preview))}%
+\btdm@footer@tsymb{1}~~\btdm@printshort@border
+% start: \btdm@sectionmax@target@start, end: \btdm@sectionmax@target@end
+\foreach \i in {\btdm@sectionmax@target@start,...,\btdm@sectionmax@target@end} {%
+    \ifbtdm@footfade@
+        \btdm@typesettocfooter@footfade
+    \else\ifnum\i>\btdm@sectionmax@target@start\btdm@printshort@mid\btdm@next@\btdm@printshort@mid\fi\fi
+    \setbox\btdm@box@lowforsec=\hbox{\btdm@printshort@lowforsec{\i}}%
+    % note: we always calc the non(semi)bold thickness
+    % \ifnum\value{section}=\i % old secton guard
+    \let\btdm@thesec\thesection
+    \@tempdima=\dimexpr\wd\btdm@box@lowforsec+.5em\relax
+    % we rlap them by setting them to the right
+    \if@btdm@footer@has@sub@\hb@xt@\z@{\smash{\tiny\@declaredcolor{lightgray}\raisebox{\dimexpr-\ht\btdm@box@lowforsec+.13ex}{\hskip.5\@tempdima\relax\hb@xt@\z@{\hss\btdm@subsections@low{\i}\hss}}}\hss}\fi\ifnum\value{section}=\i\ifnum\insertframenumber=\btdm@inserttotalframenumber \else \usebeamerfont{active section in head/foot}\usebeamercolor[fg]{active section in head/foot}\fi\fi
+    \parbox\@tempdima{\centering\hyperlink{btdm@section.\i}{\usebox\@tempboxa\smash{\btdm@printshort@lowforsec{\i}}}}% we erase all depth to allow sublinks to be clicked more easily
+}%
+\btdm@printshort@border~~\btdm@footer@tsymb{\btdm@inserttotalframenumber}}
+\newsavebox\btdm@toc@footerbox
+\def\btdm@toc@footerbox@cachedpage{-1}
+
+\def\btdm@typesettocfooter{%
 \ifnum\btdm@sectionmax@target@preview<0\else
-    % get start index as sec-2
-    \pgfmathsetmacro\btdm@sectionmax@target@start{int(max(1,\number\c@section-\btdm@footline@threshold/2))}%
-    \pgfmathsetmacro\btdm@sectionmax@target@end{int(min(\number\c@btdm@sectioncount,\btdm@sectionmax@target@start+\btdm@sectionmax@target@preview))}%
-    % try to update lower if upper was capped
-    \pgfmathsetmacro\btdm@sectionmax@target@start{int(max(1,\btdm@sectionmax@target@end-\btdm@sectionmax@target@preview))}%
-    \btdm@footer@tsymb{1}~~\btdm@printshort@border
-    % start: \btdm@sectionmax@target@start, end: \btdm@sectionmax@target@end
-    \foreach \i in {\btdm@sectionmax@target@start,...,\btdm@sectionmax@target@end} {%
-        \ifbtdm@footfade@
-            \btdm@typesetftocfooter@footfade
-        \else\ifnum\i>\btdm@sectionmax@target@start\btdm@printshort@mid\btdm@next@\btdm@printshort@mid\fi\fi
-        \setbox\btdm@box@lowforsec=\hbox{\btdm@printshort@lowforsec{\i}}%
-        % note: we always calc the non(semi)bold thickness
-        % \ifnum\value{section}=\i % old secton guard
-        \let\btdm@thesec\thesection
-        \@tempdima=\dimexpr\wd\btdm@box@lowforsec+.5em\relax
-        % we rlap them by setting them to the right
-        \if@btdm@footer@has@sub@\hb@xt@\z@{\smash{\tiny\@declaredcolor{lightgray}\raisebox{\dimexpr-\ht\btdm@box@lowforsec+.13ex}{\hskip.5\@tempdima\relax\hb@xt@\z@{\hss\btdm@subsections@low{\i}\hss}}}\hss}\fi\ifnum\value{section}=\i\ifnum\insertframenumber=\btdm@inserttotalframenumber \else \usebeamerfont{active section in head/foot}\usebeamercolor[fg]{active section in head/foot}\fi\fi
-        \parbox\@tempdima{\centering\hyperlink{btdm@section.\i}{\usebox\@tempboxa\smash{\btdm@printshort@lowforsec{\i}}}}% we erase all depth to allow sublinks to be clicked more easily
-    }%
-    \btdm@printshort@border~~\btdm@footer@tsymb{\btdm@inserttotalframenumber}%
+    \ifnum\btdm@toc@footerbox@cachedpage=\insertframenumber\else % use cache
+        % update cache
+        \xdef\btdm@toc@footerbox@cachedpage{\insertframenumber}%
+        \global\setbox\btdm@toc@footerbox=\hbox{\btdm@@typesettocfooter}\relax
+    \fi
+    \copy\btdm@toc@footerbox
 \fi}
 
-\def\btdm@footline@data{\btdm@typesetftocfooter}
+\def\btdm@footline@data{\btdm@typesettocfooter}
 
 % inject sections
 \newcounter{btdm@sectioncount}
