update triangle siz to re-fit the bandage

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -402,7 +402,7 @@
    \@tempdimc=\dimexpr-.25cm-.4ex\relax
 \else
    \@tempdima=\dimexpr3.75ex+.45ex+4.12pt\relax
-   \@tempdimb=\dimexpr-3.75ex/2-.94pt\relax
+   \@tempdimb=\dimexpr-3.75ex/2-.45ex/2\relax
    \@tempdimc=\dimexpr-.25cm-.25ex\relax
 \fi
 \smash{\raisebox\@tempdimb{\resizebox*!\@tempdima{\@declaredcolor{btdm@block}\mdseries\faCaretLeft}}}\hskip\@tempdimc}%
