adapt linespread to lato

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -37,6 +37,7 @@
 \RequirePackage[default]{lato}
 \RequirePackage[scaled=.95]{FiraMono}
 \AtBeginDocument{\fontseries{m}\selectfont}
+\linespread{1.015}
 
 % mabye check Londrina Solid
 \def\btdm@sbseries{\bfseries}
