font update for active section in head/foot

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -148,7 +148,7 @@
 \setbeamerfont{title}{parent=structure,size=\Huge,series=\fontseries{ub}}
 \setbeamerfont{subtitle}{shape=\slshape,size=\LARGE}
 % active section in the footline, custom
-\setbeamerfont{active section in head/foot}{series=\btdm@sbseries}
+\setbeamerfont{active section in head/foot}{series=\fontseries{b}}
 \setbeamerfont{enumerate item}{parent=normal text}
 \setbeamerfont{enumerate subitem}{parent=normal text}
 \setbeamerfont{enumerate subsubitem}{parent=normal text}
