--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -407,7 +407,7 @@
    \@tempdimc=\dimexpr-.25cm-.4ex\relax
 \else
    \@tempdima=\dimexpr3.75ex+.45ex+4.12pt\relax
-   \@tempdimb=\dimexpr-3.75ex/2-.45ex/2\relax
+   \@tempdimb=\dimexpr-3.75ex/2-.8pt\relax
    \@tempdimc=\dimexpr-.25cm-.25ex\relax
 \fi
 \smash{\raisebox\@tempdimb{\resizebox*!\@tempdima{\@declaredcolor{btdm@block}\mdseries\faCaretLeft}}}\hskip\@tempdimc}%
@@ -421,7 +421,7 @@
 \hskip.5mm\usebeamercolor*[fg]{frametitle}\strut\insertframetitle
 \hskip\dimexpr\wd\btdm@triangle+.45ex\null% account for the triangle if present
 \endminipage
-\llap{\usebox\btdm@triangle}\strut
+\strut\llap{\copy\btdm@triangle}\strut
 \endbeamercolorbox
 }
 
