redsign the lightmode so that it is more minimal

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -82,10 +82,10 @@
 \colorlet{btdm@softtext}{gray!42!white!95!btdm@primary}
 \colorlet{btdm@frametitle}{btdm@primary}
 \colorlet{btdm@contrast}{white!75!btdm@primary}
-\colorlet{btdm@border@up}{lightgray!12!white}
-\colorlet{btdm@block}{black!90!btdm@primary!90!btdm@border@up}
 \colorlet{btdm@background}{white!99!gray}
+\colorlet{btdm@border@up}{btdm@background}
 \colorlet{btdm@border@down}{lightgray!12!white}
+\colorlet{btdm@block}{btdm@background}
 \colorlet{btdm@foot}{gray}
 \colorlet{btdm@foot@page}{btdm@primary}
 }
