improve loading of mathastext

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -33,9 +33,9 @@
 \ProcessKeyvalOptions*
 
 % \RequirePackage[defaultfam,light,tabular,lining]{montserrat}
-\RequirePackage{mathastext}
 \RequirePackage[default]{lato}
 \RequirePackage[scaled=.95]{FiraMono}
+\AtEndPreamble{\RequirePackage{mathastext}}
 \AtBeginDocument{\fontseries{m}\selectfont}
 \linespread{1.015}
 
