updating math for btdm

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -35,7 +35,7 @@
 % \RequirePackage[defaultfam,light,tabular,lining]{montserrat}
 \RequirePackage[default]{lato}
 \RequirePackage[scaled=.95]{FiraMono}
-\AtEndPreamble{\RequirePackage{mathastext}}
+\AtEndPreamble{\RequirePackage{mdsymbol,mathastext}}
 \AtBeginDocument{\fontseries{m}\selectfont}
 \linespread{1.015}
 
@@ -43,7 +43,6 @@
 \def\btdm@sbseries{\bfseries}
 
 
-\RequirePackage{sfmath,mathastext} % TODO: no-libs option
 % update math figures
 
 \RequirePackage{relsize}
