--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -35,7 +35,7 @@
 % \RequirePackage[defaultfam,light,tabular,lining]{montserrat}
 \RequirePackage[default]{lato}
 \RequirePackage[scaled=.95]{FiraMono}
-\AtEndPreamble{\RequirePackage{mdsymbol,mathastext}}
+\AtEndPreamble{\RequirePackage{mdsymbol}}
 \AtBeginDocument{\fontseries{m}\selectfont}
 \linespread{1.015}
 
