--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -436,6 +436,8 @@
 \def\titlenumber#1{\def\btdm@titlepage@number{#1}}
 \let\btdm@titlepage@number\@empty
 
+\def\titlesuffix#1{\def\btdm@titlesuffix{#1}}
+\let\btdm@titlesuffix\@empty
 \defbeamertemplate*{title page}{digital-minimal}[1][]{%
 \smash{\hskip\textwidth\llap{\raisebox{-.5\height}{\@declaredcolor{btdm@softtext}\fontsize{72pt}{72pt}\btdm@sbseries\btdm@titlepage@number}}}\vskip2em\vfill
 \begin{center}
@@ -443,7 +445,7 @@
     {\usebeamerfont{title}\usebeamercolor*[fg]{title}\inserttitle}\par
     {\usebeamerfont{subtitle}\usebeamercolor*[fg]{subtitle}\insertsubtitle}\relax
 \end{center}
-\vfill\null}
+\vfill\smash{\rlap{\btdm@titlesuffix}}\null}
 
 
 \def\setauthormailsubject#1{\def\btdm@authormailsuff{?Subject=#1}}
