--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -430,7 +430,7 @@
 }%
 \vfill\pgfmathsetmacro\btdl@extlenw{\textwidth+2em}
 \hspace*{-1em}\parbox{\btdl@extlenw pt}{\parbox[b]{.35\textwidth}{%
-    {\small\ifx\btdl@outro@right\@empty\textbf{\insertauthor}\else\href{mailto:\btdl@email}{\textbf{\insertauthor}}\fi}\\
+    {\small\ifx\btdl@outro@right\@empty\textbf{\insertshortauthor}\else\href{mailto:\btdl@email}{\textbf{\insertshortauthor}}\fi}\\
     {\footnotesize\btdl@outro{}}%
 }\hfill\parbox[b]{.35\textwidth}{%
 {\hbox{}\hfill\footnotesize\ifx\btdl@outro@right\@empty\href{mailto:\btdl@email}{\btdl@email}\else\btdl@outro@right\fi}%
