--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -112,7 +112,7 @@
 \setbeamerfont{license}{size=\fontsize{6}{8},series=\mdseries}
 
 \setbeamerfont{button}{series=\sbfamily}
-
+\setbeamerfont{description item}{series=\fontseries{medium}}
 \setbeamercolor{description item}{fg=btdl@color@black}
 
 \setbeamercolor{enumerate item}{fg=btdl@color@black}
@@ -154,9 +154,7 @@
 \updateitemize{\defaultitemizeblock}
 \updateitemizesub{\tiny\tikz[baseline=-1.15ex]{\fill (0,0) circle (1.65pt);}}
 
-
-\defbeamertemplate{description item}{colorful-dream}{\fontseries{medium}\selectfont\insertdescriptionitem:\hfill}
-\setbeamertemplate{description item}[colorful-dream]
+\setbeamertemplate{description item}{\usebeamerfont{description item}\insertdescriptionitem:\hfill}
 
 \setbeamercolor{block title}{use=structure,fg=btdl@color@white,bg=btdl@solidF}
 \setbeamercolor{block body}{parent=normal text,use=block title,bg=block title.bg!10!bg}
