background on recolor

--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -54,6 +54,7 @@
 \definecolor{btdl@color@primary}{RGB}{#1}%
 \definecolor{btdl@color@secondary}{RGB}{#2}%
 \definecolor{btdl@color@alerted}{RGB}{#3}%
+\colorlet{btdl@color@background}{btdl@color@primary!1!}
 }
 
 % RGB(249, 166, 2) RGB(249, 224, 176) RGB(137,64,75)
