fix: update outro color based on current palette

--- a/dividing-lines/example.tex
+++ b/dividing-lines/example.tex
@@ -7,6 +7,7 @@
 \usepackage{lipsum}
 
 \usetheme{dividing-lines}
+\SetColorProfile{159, 166, 2}{249, 224, 176}{137,64,75}
 
 \title{Example Presentation}
 \subtitle{This is madness}
