--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -428,10 +428,10 @@
 %% Allow for another thing on the right side
 \def\btdl@outro@right{} \def\outroright#1{\gdef\btdl@outro@right{#1}}
 \def\btdl@postpage{} \def\PostPage#1{\def\btdl@postpage{#1}}
-\colorlet{@outrocolor}{btdl@color@primary}
+\def\btdl@outrocolor{btdl@color@primary}
 \AtEndDocument{%
 \begingroup
-\setbeamercolor{background canvas}{bg=@outrocolor}%
+\setbeamercolor{background canvas}{bg=\btdl@outrocolor}%
 \begin{frame}[plain,t]%
 \hypertarget{btdl@slide@marker.\inserttotalframenumber}{}%
 \hspace*{-\btdl@leftindent}\minipage[c][\textheight]{\textwidth+\btdl@leftindent}
