access leftindent directly for btdl

--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -180,6 +180,7 @@
 
 %% head line
 \newlength{\btdl@leftindent} \btdl@leftindent6.5em
+\def\BtdlLeftIndent{\btdl@leftindent}%
 \setbeamersize{sidebar width left=\btdl@leftindent}
 
 \newlength\btdl@frametitle@ht \btdl@frametitle@ht5ex
