--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -446,8 +446,10 @@
 
 \def\titlesuffix#1{\def\btdm@titlesuffix{#1}}
 \let\btdm@titlesuffix\@empty
+\setbeamerfont{titlenumber}{size=\fontsize{72pt}{72pt},series=\btdm@sbseries}
+\setbeamercolor{titlenumber}{fg=btdm@softtext}
 \defbeamertemplate*{title page}{digital-minimal}[1][]{%
-\smash{\hskip\textwidth\llap{\raisebox{-.5\height}{\@declaredcolor{btdm@softtext}\fontsize{72pt}{72pt}\btdm@sbseries\btdm@titlepage@number}}}\vskip2em\vfill
+\smash{\hskip\textwidth\llap{\raisebox{-.5\height}{\usebeamercolor{titlenumber}\usebeamerfont{titlenumber}\btdm@titlepage@number}}}\vskip2em\vfill
 \begin{center}
 \parskip=\medskipamount
     {\usebeamerfont{title}\usebeamercolor*[fg]{title}\inserttitle}\par
