forcing fg of titlenumber in btdm

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -449,7 +449,7 @@
 \setbeamerfont{titlenumber}{size=\fontsize{72pt}{72pt},series=\btdm@sbseries}
 \setbeamercolor{titlenumber}{fg=btdm@softtext}
 \defbeamertemplate*{title page}{digital-minimal}[1][]{%
-\smash{\hskip\textwidth\llap{\raisebox{-.5\height}{\usebeamercolor{titlenumber}\usebeamerfont{titlenumber}\btdm@titlepage@number}}}\vskip2em\vfill
+\smash{\hskip\textwidth\llap{\raisebox{-.5\height}{\usebeamercolor[fg]{titlenumber}\usebeamerfont{titlenumber}\btdm@titlepage@number}}}\vskip2em\vfill
 \begin{center}
 \parskip=\medskipamount
     {\usebeamerfont{title}\usebeamercolor*[fg]{title}\inserttitle}\par
