btdl allow to configure title page alignment

--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -348,9 +348,10 @@
     }%
 }
 
+\def\TitlepageSlideAlign{b}
 \def\PreTitlepage{}\def\PostTitlepage{}
 \def\DoTitlepage{\begingroup
-\begin{frame}[plain,b]%
+\begin{frame}[plain,\TitlepageSlideAlign]%
     \PreTitlepage%
     \hypertarget{btdl@slide@marker.1}{}\hspace*{-\btdl@leftindent}\minipage[b][.75\textheight]{\textwidth+\btdl@leftindent}
     \titlepage
