add slide alignment marker to internal minipage of titlepage

--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -353,7 +353,7 @@
 \def\DoTitlepage{\begingroup
 \begin{frame}[plain,\TitlepageSlideAlign]%
     \PreTitlepage%
-    \hypertarget{btdl@slide@marker.1}{}\hspace*{-\btdl@leftindent}\minipage[b][.75\textheight]{\textwidth+\btdl@leftindent}
+    \hypertarget{btdl@slide@marker.1}{}\hspace*{-\btdl@leftindent}\minipage[\TitlepageSlideAlign][.75\textheight]{\textwidth+\btdl@leftindent}
     \titlepage
     \endminipage
 \tikzpicture[overlay,remember picture]%
