--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -294,7 +294,7 @@
     \@tempdima=\dimexpr\wd\btdm@box@lowforsec+.5em\relax
     % we rlap them by setting them to the right
     \if@btdm@footer@has@sub@\hb@xt@\z@{\smash{\tiny\@declaredcolor{lightgray}\raisebox{\dimexpr-\ht\btdm@box@lowforsec+.13ex}{\hskip.5\@tempdima\relax\hb@xt@\z@{\hss\btdm@subsections@low{\i}\hss}}}\hss}\fi\ifnum\value{section}=\i\ifnum\insertframenumber=\btdm@inserttotalframenumber \else \usebeamerfont{active section in head/foot}\usebeamercolor[fg]{active section in head/foot}\fi\fi
-    \parbox\@tempdima{\centering\hyperlink{btdm@section.\i}{\usebox\@tempboxa\smash{\btdm@printshort@lowforsec{\i}}}}% we erase all depth to allow sublinks to be clicked more easily
+    \parbox\@tempdima{\strut\centering\hyperlink{btdm@section.\i}{\usebox\@tempboxa\smash{\btdm@printshort@lowforsec{\i}}}\strut}% we erase all depth to allow sublinks to be clicked more easily
 }%
 \btdm@printshort@border~~\btdm@footer@tsymb{\btdm@inserttotalframenumber}}
 \newsavebox\btdm@toc@footerbox
