--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -483,11 +483,14 @@
 \def\BtdmMakeNextFullBottom{%
 % we do it globally so it can be used with animations that clear themselves up
 \gdef\btdm@footline@prefix{% do not show sub in foots:
-\@btdm@footer@has@sub@false\colorlet{btdm@border@down}{btdm@primary}%
+\@btdm@footer@has@sub@false
+\btdm@footfade@false % this way we do not fade on sections
+\global\let\btdm@footline@prefix\@empty}%
+\colorlet{btdm@border@down}{btdm@section@fill}%
 \colorlet{btdm@foot}{btdm@contrast}%
 \ifbtdm@primaryfoot@\setbeamercolor{active section in head/foot}{fg=btdm@contrast}\fi
-\btdm@footfade@false % this way we do not fade on sections
-\colorlet{btdm@foot@page}{btdm@contrast}\global\let\btdm@footline@prefix\@empty}%
+\colorlet{btdm@foot@page}{btdm@contrast}%
+\setbeamercolor{footline}{bg=btdm@border@down,fg=btdm@foot}
 }
 \let\btdm@footline@prefix\@empty
 
